--- a/productsinventory/webapp/i18n/i18n.properties
+++ b/productsinventory/webapp/i18n/i18n.properties
@@ -4,7 +4,7 @@
 appTitle=Products Inventory
 
 #YDES: Application description
-appDescription=An SAP Fiori freestyle app to manage products inventory (demo)
+appDescription=An SAP Fiori freestyle app to manage products inventory nachshon
 
 #~~~ Worklist View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XTIT: Worklist view title
